# hackaton-quiz

./: .gitignore  README.md
backend/: Dockerfile  docker-compose.yml  makefile  pyproject.toml
backend/core/: api.py  prompts.py  settings.py  urls.py
backend/quiz/: admin.py  api.py  models.py  openai_client.py  schemas.py
backend/quiz/migrations/: 0001_initial.py  0002_question_remove_openquestion_quiz_and_more.py  0003_quizentry.py  0004_quiz_author.py
prompt_schemas/: open_answer_correctness_example_response.json  open_answer_correctness_schema.json  prompts.md  quiz_generation_example.json  quiz_generation_schema.json
web-ui/: .prettierignore  package.json  pnpm-lock.yaml
web-ui/common/: interfaces.ts
web-ui/components/: Footer.tsx  Layout.tsx  Leaderboard.tsx  Navbar.tsx  QuizCard.tsx
web-ui/pages/: _app.tsx  create-quiz.tsx  index.tsx  leaderboards.tsx  login.tsx
web-ui/pages/api/auth/: [...nextauth].ts
