[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Łukasz Wolak <lukasz.wolak@theluke.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.2"
django-ninja = "^0.22.2"
openai = "^0.27.8"

[tool.pyright]
venvPath = "."
venv = ".venv"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.272"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
