[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Łukasz Wolak <lukasz.wolak@theluke.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.2"
django-ninja = "^0.22.2"
openai = "^0.27.8"
django-ninja-jwt = {version = "^5.2.5", extras = ["crypto"]}
six = "^1.16.0"
django-cors-headers = "^4.1.0"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = [
  "E",  # Pycodestyle
  "W",
  "F",  # Pyflakes
  "I",  # isort
  "N",  # pep8
  "W",
  "PL", # Pylint
  "A",  # fl`ake8
]
unfixable = ["F401", "F841"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.272"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
